--- a/app/src/main/res/layout/activity_exercicio_form.xml
+++ b/app/src/main/res/layout/activity_exercicio_form.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp">
 
+    <EditText
+        android:id="@+id/etNomeTreino"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Nome do Treino"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <EditText
+        android:id="@+id/etObjetivoTreino"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Objetivo do Treino"
+        app:layout_constraintTop_toBottomOf="@id/etNomeTreino"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <Button
+        android:id="@+id/btnSalvarTreino"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salvar Treino"
+        android:backgroundTint="@color/roxo"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/etObjetivoTreino"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
