--- a/app/src/main/res/layout/activity_exercicio_form.xml
+++ b/app/src/main/res/layout/activity_exercicio_form.xml
@@ -7,33 +7,54 @@
     android:padding="16dp">
 
     <EditText
-        android:id="@+id/etNomeTreino"
+        android:id="@+id/etNomeExercicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nome do Treino"
+        android:hint="Nome do exercício"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
-        android:id="@+id/etObjetivoTreino"
+        android:id="@+id/etDescricaoExercicio"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Objetivo do Treino"
-        app:layout_constraintTop_toBottomOf="@id/etNomeTreino"
+        android:hint="Descrição"
+        app:layout_constraintTop_toBottomOf="@id/etNomeExercicio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="12dp"/>
+
+    <EditText
+        android:id="@+id/etSeries"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Séries"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@id/etDescricaoExercicio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"/>
+
+    <EditText
+        android:id="@+id/etRepeticoes"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Repetições"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@id/etSeries"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"/>
 
     <Button
-        android:id="@+id/btnSalvarTreino"
+        android:id="@+id/btnSalvarExercicio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Salvar Treino"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/roxo"
-        android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/etObjetivoTreino"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Salvar"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/etRepeticoes" />
 </androidx.constraintlayout.widget.ConstraintLayout>
